--- a/c-code/Makefile.win
+++ b/c-code/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe -D__DEBUG__
 CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = Main.o rkSolve.o
-LINKOBJ  = Main.o rkSolve.o
+OBJ      = Main.o rSolveTest.o
+LINKOBJ  = Main.o rSolveTest.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -g3
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -27,5 +27,5 @@ $(BIN): $(OBJ)
 Main.o: Main.c
 	$(CC) -c Main.c -o Main.o $(CFLAGS)
 
-rkSolve.o: rkSolve.c
-	$(CC) -c rkSolve.c -o rkSolve.o $(CFLAGS)
+rSolveTest.o: rSolveTest.c
+	$(CC) -c rSolveTest.c -o rSolveTest.o $(CFLAGS)
