--- a/c-code/Makefile.win
+++ b/c-code/Makefile.win
@@ -1,6 +1,9 @@
 # Project: AdaptiveGuidance
 # Makefile created by Dev-C++ 5.11
 
+# This Makefile is written for syntax check!
+# Regenerate it if you want to use this Makefile to build.
+
 CPP      = g++.exe -D__DEBUG__
 CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
@@ -10,11 +13,11 @@ LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
 BIN      = AdaptiveGuidance.exe
-CXXFLAGS = $(CXXINCS) -g3
-CFLAGS   = $(INCS) -g3
+CXXFLAGS = $(CXXINCS) -fsyntax-only -g3
+CFLAGS   = $(INCS) -fsyntax-only -g3
 RM       = rm.exe -f
 
-.PHONY: all all-before all-after clean clean-custom
+.PHONY: all all-before all-after clean clean-custom $(OBJ) $(BIN)
 
 all: all-before $(BIN) all-after
 
@@ -22,10 +25,9 @@ clean: clean-custom
 	${RM} $(OBJ) $(BIN)
 
 $(BIN): $(OBJ)
-	$(CC) $(LINKOBJ) -o $(BIN) $(LIBS)
 
 Main.o: Main.c
-	$(CC) -c Main.c -o Main.o $(CFLAGS)
+	$(CC) -c Main.c $(CFLAGS)
 
 rSolveTest.o: rSolveTest.c
-	$(CC) -c rSolveTest.c -o rSolveTest.o $(CFLAGS)
+	$(CC) -c rSolveTest.c $(CFLAGS)
